# conways_gameoflife

./: .gitignore  .gitmodules  CMakeLists.txt  run.sh
cpp/: CMakeLists.txt
cpp/src/: main.cpp
cpp/src/shaders/: gameoflife.frag
rust/: Cargo.toml
src/: '  CMakeLists.txt  grid.cpp  main.cpp  raygui.cpp
src/shaders/: gameoflife.frag
